2008-02-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/classroom_manager.cpp:
	hide item before pushing client into remove-list

	* lib/include/ivs_connection.h:
	* lib/src/ivs_connection.cpp:
	- moved ivsConnection::s_localDisplayFormat to static
	  __localDisplayFormat-struct
	- fixed broken gradient-filter of tight-encoding
	- fixed missing parentheses in pixel-calculation in tight-encoding
	- when handling jpeg-data, dynamically allocate memory instead of
	  using the stack in a non-standard way
	- fixed color-conversion when handling X-cursor
	- fixed frequent crash of demo-mode by adding additional check in
	  ivsConnection::handleItalc(...) which avoids calling
	  QImage::scanLine() with an invalid parameter and thus raising a
	  Qt-internal assertion (closes #1849671)

	* lib/resources/*.ts:
	* lib/resources/*.qm:
	* ica/resources/*.ts:
	* ica/resources/*.qm:
	* ima/resources/*.ts:
	* ima/resources/*.qm:
	refreshed localization files, included updates of Spanish localization
	by <schoolboy/at/ole/dot/com>

2008-02-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.6-rc1 release

	* ica/x11/x11vnc/xrandr.c:
	* ica/x11/x11vnc/userinput.c:
	* ica/x11/x11vnc/macosx.h:
	* ica/x11/x11vnc/xwrappers.h:
	* ica/x11/x11vnc/keyboard.c:
	* ica/x11/x11vnc/options.h:
	* ica/x11/x11vnc/xrandr.h:
	* ica/x11/x11vnc/userinput.h:
	* ica/x11/x11vnc/xinerama.c:
	* ica/x11/x11vnc/keyboard.h:
	* ica/x11/x11vnc/util.c:
	* ica/x11/x11vnc/user.c:
	* ica/x11/x11vnc/8to24.c:
	* ica/x11/x11vnc/winattr_t.h:
	* ica/x11/x11vnc/connections.c:
	* ica/x11/x11vnc/user.h:
	* ica/x11/x11vnc/macosxCGP.c:
	* ica/x11/x11vnc/avahi.c:
	* ica/x11/x11vnc/xevents.c:
	* ica/x11/x11vnc/avahi.h:
	* ica/x11/x11vnc/xevents.h:
	* ica/x11/x11vnc/macosxCG.c:
	* ica/x11/x11vnc/macosxCG.h:
	* ica/x11/x11vnc/win_utils.c:
	* ica/x11/x11vnc/cursor.c:
	* ica/x11/x11vnc/rates.c:
	* ica/x11/x11vnc/x11vnc_defs.c:
	* ica/x11/x11vnc/cursor.h: