@@ -2,7 +2,7 @@
  * ivs.cpp - implementation of IVS, a VNC-server-abstraction for platform-
  *           independent VNC-server-usage
  *
- * Copyright (c) 2006-2007 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
+ * Copyright (c) 2006-2008 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
  *  
  * This file is part of iTALC - http://italc.sourceforge.net
  *
