@@ -3,7 +3,7 @@
  *                        transparent usage of operating-system-specific
  *                        functions
  *
- * Copyright (c) 2007 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
+ * Copyright (c) 2007-2008 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
  *
  * This file is part of iTALC - http://italc.sourceforge.net
  *
