@@ -1,7 +1,7 @@
 /*
  * vncview.cpp - VNC-viewer-widget
  *
- * Copyright (c) 2006-2007 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
+ * Copyright (c) 2006-2008 Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
  *  
  * This file is part of iTALC - http://italc.sourceforge.net
  *
@@ -55,7 +55,7 @@ vncView::vncView( const QString & _host, QWidget * _parent ) :
 		tr( "Establishing connection to %1 ..." ).arg( _host ),
 					":/resources/watch%1.png", 16, this );
 
-	m_connection = new ivsConnection( _host, ivsConnection::QualityLow,
+	m_connection = new ivsConnection( _host, ivsConnection::QualityMedium,
 								FALSE, this );
 	connect( m_connection, SIGNAL( cursorShapeChanged() ),
 					this, SLOT( updateCursorShape() ) );
